--- a/.github/workflows/DemoWorkflow.yml
+++ b/.github/workflows/DemoWorkflow.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: Print The Contents
         run: echo "Hi there...."
-        run: echo "Hi there again...."
+             echo "Hi there again..."
         
