--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -11,18 +11,16 @@ jobs:
         run: echo "Hi there..."
       - name: Second Step 2
         run: echo "Testing second step only...."
-      - name: Create release
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: static-site
+      - name: Create Release
         id: create_release
         uses: actions/create-release@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+          release_name: Release ${{ github.ref }}    
          
