--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:  
 jobs:
   Demojob:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: First Step 1
