--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -19,5 +19,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: v10.3
-          release_name: v10.3  
+          release_name: v10.3
+          prerelease: false
          
