--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v10.3
-          release_name: v10.3
+          tag_name: v-${{ github.run_number }}
+          release_name: v-${{ github.run_number }}
           prerelease: false
          
