--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           tag_name: v-${{ github.run_number }}
           release_name: v-${{ github.run_number }}
-          prerelease: false
+          prerelease: true
          
