--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -11,7 +11,7 @@ jobs:
       - name: First Step 1
         run: echo "Hi there..."
       - name: Second Step 2
-        run: echo "Testing second step only...."
+        run: echo "${{ github.ref }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
