--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -5,7 +5,9 @@ on:
   workflow_dispatch:  
 jobs:
   Demojob:
-    permissions: write-all
+    permissions:
+      contents: read
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: First Step 1
@@ -14,14 +16,11 @@ jobs:
         run: echo "${{ github.ref }}"
       - name: Create Release
         id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        uses: actions/github-script@v4.0.2
         with:
-          tag_name: v${{ github.run_number }}
-          release_name: v${{ github.event.release.tag_name }}
-          body: |
-            gh release create ${{ github.ref }} --generate-notes
-          draft: false
-          prerelease: false
-         
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            await github.request('POST /repos/${{ github.repository }}/releases', {
+              tag_name: "${{ github.ref }}",
+              generate_release_notes: true
+            });
