--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -8,6 +8,7 @@ jobs:
     permissions:
       contents: read
       issues: write
+      repo: write
     runs-on: ubuntu-latest
     steps:
       - name: First Step 1
@@ -20,7 +21,10 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            await github.request('POST /repos/${{ github.repository }}/releases', {
+            await github.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
               tag_name: "${{ github.ref }}",
-              generate_release_notes: true
+              name: "${{ github.ref }} Release",
+              body: "Release notes for ${{ github.ref }}",
             });
