--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -5,10 +5,7 @@ on:
   workflow_dispatch:  
 jobs:
   Demojob:
-    permissions:
-      contents: read
-      issues: write
-      repo: write
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: First Step 1
@@ -17,14 +14,17 @@ jobs:
         run: echo "${{ github.ref }}"
       - name: Create Release
         id: create_release
-        uses: actions/github-script@v4.0.2
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            await github.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: "${{ github.ref }}",
-              name: "${{ github.ref }} Release",
-              body: "Release notes for ${{ github.ref }}",
-            });
+          tag_name: v${{ github.run_number }}
+          release_name: v${{ github.event.release.tag_name }}
+          body: |
+            Version 10.3.104
+            What's Changed
+            v${{ github.run_number }}
+            https://tekvizion.atlassian.net/browse/TV360-4968 by @sharath3087 in #2713
+            Full Changelog: v10.3.103...v10.3.104
+          draft: false
+          prerelease: false
