--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -12,19 +12,13 @@ jobs:
         run: echo "Hi there..."
       - name: Second Step 2
         run: echo "${{ github.ref }}"
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      - name: Create tag and release
+        id: release
+        uses: rymndhng/release-on-push-action@master
         with:
-          tag_name: v${{ github.run_number }}
-          release_name: v${{ github.event.release.tag_name }}
-          body: |
-            Version 10.3.104
-            What's Changed
-            v${{ github.run_number }}
-            https://tekvizion.atlassian.net/browse/TV360-4968 by @sharath3087 in #2713
-            Full Changelog: v10.3.103...v10.3.104
-          draft: false
-          prerelease: false
+          bump_version_scheme: patch
+          tag_prefix: v
+          use_github_release_notes: true
+          prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
