--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -20,4 +20,4 @@ jobs:
           tag_prefix: v
           use_github_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
