--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -12,12 +12,17 @@ jobs:
         run: echo "Hi there..."
       - name: Second Step 2
         run: echo "${{ github.ref }}"
-      - name: Create tag and release
-        id: release
-        uses: rymndhng/release-on-push-action@master
-        with:
-          bump_version_scheme: patch
-          tag_prefix: v
-          use_github_release_notes: true
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v10.1.104
+          release_name: v10.1.104
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: true
