--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -18,8 +18,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v10.1.105
-          release_name: v10.1.105
+          tag_name: v10.1.106
+          release_name: v10.1.106
           body: |
             Changes in this Release
             - First Change
@@ -27,3 +27,9 @@ jobs:
           draft: false
           prerelease: true
           generate_release_notes: true
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Test
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
