--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: First Step 1
-        run: echo "Hi there..."
+        run: echo "Hi there....."
       - name: Second Step 2
         run: echo "${{ github.ref }}"
