--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,6 +1,7 @@
 name-template: "v$NEXT_PATCH_VERSION"
 tag-template: "v$NEXT_PATCH_VERSION"
-latest: "true"
+publish: true
+prerelease: true
 template: |
   $CHANGES
   $CONTRIBUTORS
