--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,6 +2,9 @@ name: DemoWorkflow345456
 on:
   push:
     branches: [main]
+    tags:
+      - v*.*.*
+      
   workflow_dispatch:  
 jobs:
   Demojob:
