--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -34,11 +34,12 @@ jobs:
           publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MAJOR: ${{ steps.version.outputs.major }}
-          TAG: ${{ steps.version.outputs.tag }}
       - name: force update major tag
+        env:
+         MAJOR: ${{ steps.version.outputs.major }}
+         TAG: ${{ steps.version.outputs.tag }}
         run: |
          echo "Major: ${{ env.MAJOR }}"
          echo "Tag: ${{ env.TAG }}"
-         # git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
-         # git push origin refs/tags/v${{ steps.version.outputs.major }} -f  
+         git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
+         git push origin refs/tags/v${{ steps.version.outputs.major }} -f  
