--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -41,5 +41,5 @@ jobs:
         run: |
          echo "Major: ${{ env.MAJOR }}"
          echo "Tag: ${{ env.TAG }}"
-         git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
-         git push origin refs/tags/v${{ steps.version.outputs.major }} -f  
+         # git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
+         # git push origin refs/tags/v${{ steps.version.outputs.major }} -f  
