--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,27 +19,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  
-      - name: version
-        id: version
-        run: |
-          tag=${GITHUB_REF/refs\/tags\//}
-          version=${tag#v}
-          major=${version%%.*}
-          echo "tag=${tag}" >> $GITHUB_OUTPUT
-          echo "version=${version}" >> $GITHUB_OUTPUT
-          echo "major=${major}" >> $GITHUB_OUTPUT
-      - uses: release-drafter/release-drafter@master
-        with:
-          version: ${{ steps.version.outputs.version }}
-          publish: true
+      - uses: release-drafter/release-drafter@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: force update major tag
-        env:
-         MAJOR: ${{ steps.version.outputs.major }}
-         TAG: ${{ steps.version.outputs.tag }}
-        run: |
-         echo "Major: ${{ env.MAJOR }}"
-         echo "Tag: ${{ env.TAG }}"
-         # git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
-         # git push origin refs/tags/v${{ steps.version.outputs.major }} -f  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
