--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -21,5 +21,8 @@ jobs:
           fetch-depth: 0  
       - name: Release Drafter
         uses: release-drafter/release-drafter@v5.25.0
+         with:
+            publish: true            
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
