--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -12,24 +12,7 @@ jobs:
         run: echo "Hi there..."
       - name: Second Step 2
         run: echo "${{ github.ref }}"
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - run: 'echo "$AZURE_UCAASACS_CONNECTION_STRING" > key'
+        shell: bash
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: v10.1.106
-          release_name: v10.1.106
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: true
-          generate_release_notes: true
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+          AZURE_UCAASACS_CONNECTION_STRING: ${{secrets.AZURE_UCAASACS_CONNECTION_STRING}}
