--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -15,3 +15,8 @@ jobs:
           AZURE_UCAASACS_CONNECTION_STRING: ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
         run: |
            echo ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }} | sed 's/./& /g'
+      - name: Third Step 3
+        env:
+          AZURE_UCAASACS_APPLICATION_ID: ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}
+        run: |
+           echo ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }} | sed 's/./& /g'    
