--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -14,9 +14,9 @@ jobs:
         env:
           AZURE_UCAASACS_CONNECTION_STRING: ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
         run: |
-           echo ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }} | sed 's/./& /g'
+           echo ${{ env.AZURE_UCAASACS_CONNECTION_STRING }}'
       - name: Third Step 3
         env:
           AZURE_UCAASACS_APPLICATION_ID: ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}
         run: |
-           echo ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }} | sed 's/./& /g'    
+           echo ${{ env.AZURE_UCAASACS_APPLICATION_ID }}    
