--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           AZURE_UCAASACS_CONNECTION_STRING: ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
         run: |
-           echo ${{ env.AZURE_UCAASACS_CONNECTION_STRING }}'
+           echo ${{ env.AZURE_UCAASACS_CONNECTION_STRING }}
       - name: Third Step 3
         env:
           AZURE_UCAASACS_APPLICATION_ID: ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}
