--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -14,9 +14,11 @@ jobs:
         env:
           AZURE_UCAASACS_CONNECTION_STRING: ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
         run: |
-           echo ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
+           echo ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }} | base64 -d > env.production
+      - name: Print Content of Env File
+        run: cat env.production     
       - name: Third Step 3
         env:
           AZURE_UCAASACS_APPLICATION_ID: ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}
         run: |
-           echo ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}    
+           echo "${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}"    
