--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,8 +1,12 @@
 name-template: "v$NEXT_PATCH_VERSION"
 tag-template: "v$NEXT_PATCH_VERSION"
 tag-prefix: "v"
-publish: true
-prerelease: true
+latest: true
+version-resolver:
+  patch:
+    labels:
+      - 'patch'
+  default: patch
 template: |
   $CHANGES
   $CONTRIBUTORS
