--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,7 +1,7 @@
 name-template: "v$NEXT_PATCH_VERSION"
 tag-template: "v$NEXT_PATCH_VERSION"
 tag-prefix: "v"
-latest: true
+latest: "true"
 version-resolver:
   patch:
     labels:
