--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,18 +1,25 @@
-name: Release Drafter
-
+name: DemoWorkflow345456
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
-    branches:
-      - main
-  workflow_dispatch:     
-
+    branches: [main]
+    tags:
+      - v*.*.*
+      
+  workflow_dispatch:  
 jobs:
-  update_release_draft:
+  Demojob:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      # Drafts your next Release notes as Pull Requests are merged into "master"
-      - uses: release-drafter/release-drafter@v5
+      - name: First Step 1
+        run: echo "Test Test...."
+      - name: Second Step 2
+        run: echo "${{ github.ref }}"
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Release Drafter
+        uses: release-drafter/release-drafter@v5.25.0   
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
