--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Get Latest tag
+        id: current_tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"    
       - name: Release Drafter
         uses: release-drafter/release-drafter@v5.25.0   
         env:
