--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -21,8 +21,21 @@ jobs:
           fetch-depth: 0
       - name: Get Latest tag
         id: current_tag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"    
-      - name: Release Drafter
-        uses: release-drafter/release-drafter@v5.25.0   
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      - name: "Get next minor version"
+        id: next_tag
+        uses: "WyriHaximus/github-action-next-semvers@v1"
+        with:
+          version: ${{ steps.current_tag.outputs.tag }} 
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: v${{ steps.tag_version.outputs.new_tag }}
+          prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}  
