--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,14 +19,24 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Get Latest tag
-        id: current_tag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
-      - name: "Get next minor version"
-        id: next_tag
-        uses: "WyriHaximus/github-action-next-semvers@v1"
+      - name: Get latest release details
+        id: release_details
+        uses: cardinalby/git-get-release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          version: ${{ steps.current_tag.outputs.tag }} 
+          latest: true
+
+      - name: Get Latest Release commit hash
+        id: get_commit
+        uses: actions/github-script@v2.1.0
+        with:
+          script: |
+            return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
+
+      - name: Create Release Notes from commit history
+        id: list_messages
+        run: git log --pretty=format:%s --ancestry-path ${{steps.get_commit.outputs.result}}^..${{steps.hash.outputs.hash}} > ReleaseNotes.txt
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -37,5 +47,6 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          prerelease: false
+          prerelease: true
+          bodyFile: "./ReleaseNotes.txt"
           token: ${{ secrets.GITHUB_TOKEN }}  
