--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Get Commit Short Hash
+        id: hash
+        run: echo "hash=$(git rev-parse --short "$RELEVANT_SHA")" >> $GITHUB_OUTPUT
+        env:
+          RELEVANT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}    
       - name: Get latest release details
         id: release_details
         uses: cardinalby/git-get-release-action@v1
