--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -39,9 +39,6 @@ jobs:
           script: |
             return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
 
-      - name: Create Release Notes from commit history
-        id: list_messages
-        run: git log --pretty=format:%s --ancestry-path ${{steps.get_commit.outputs.result}}^..${{steps.hash.outputs.hash}} > ReleaseNotes.txt
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -53,5 +50,5 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: true
-          bodyFile: "./ReleaseNotes.txt"
+          bodyFile: "Test Test Test"
           token: ${{ secrets.GITHUB_TOKEN }}  
