--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -49,6 +49,6 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          prerelease: true
+          prerelease: false
           
           token: ${{ secrets.GITHUB_TOKEN }}  
