--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -38,7 +38,9 @@ jobs:
         with:
           script: |
             return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
-
+      - name: Create Release Notes from commit history
+        id: list_messages
+        run: echo ${{steps.get_commit.outputs.result}} ${{steps.hash.outputs.hash}} > ReleaseNotes.txt
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
