--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -40,7 +40,7 @@ jobs:
             return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
       - name: Create Release Notes from commit history
         id: list_messages
-        run: git log --pretty=format:%s --ancestry-path ${{steps.get_commit.outputs.result}} > ReleaseNotes.txt
+        run: echo ${{steps.get_commit.outputs.result}} Is the ${{steps.hash.outputs.hash}}
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -52,5 +52,5 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: false
-          bodyFile: "./ReleaseNotes.txt"
+          
           token: ${{ secrets.GITHUB_TOKEN }}  
