--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -52,5 +52,5 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: false
-          
+          generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}  
