--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -53,4 +53,5 @@ jobs:
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: false
           generateReleaseNotes: true
+          owner: "current repo owner"
           token: ${{ secrets.GITHUB_TOKEN }}  
