--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -53,5 +53,5 @@ jobs:
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: false
           generateReleaseNotes: true
-          owner: "current repo owner"
+          owner: true
           token: ${{ secrets.GITHUB_TOKEN }}  
