--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -40,7 +40,7 @@ jobs:
             return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
       - name: Create Release Notes from commit history
         id: list_messages
-        run: echo ${{steps.get_commit.outputs.result}} Is the ${{steps.hash.outputs.hash}}
+        run: git log --pretty=format:%s --ancestry-path "1b588366"^..2f104bb7 > ReleaseNotes.txt
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -53,4 +53,5 @@ jobs:
           name: ${{ steps.tag_version.outputs.new_tag }}
           prerelease: true
           generateReleaseNotes: true
+          bodyFile: "./ReleaseNotes.txt"
           token: ${{ secrets.GITHUB_TOKEN }}  
