--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -40,7 +40,7 @@ jobs:
             return "${{fromJSON(steps.release_details.outputs.assets)[0].name}}".split('-').pop().split('.').shift();
       - name: Create Release Notes from commit history
         id: list_messages
-        run: git log -1 --stat  > ReleaseNotes.txt
+        run: git log --pretty=format:"%an, %ae - %s"  > ReleaseNotes.txt
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
