Changed to Latest Release Tag

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -51,6 +51,6 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          prerelease: true
+          prerelease: false
           generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}  
