made pre release as true
made pre release as true

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -48,6 +48,6 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          prerelease: false
+          prerelease: true
           generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}  
