--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -1,26 +1,30 @@
-name: DemoWorkflow2
+name: Redeploy to Secondary Azure Storage
+
 on:
-  push:
-    branches: [main]
-  workflow_dispatch:  
+  workflow_dispatch:
+    inputs:
+      artifact_run_id:
+        description: 'Run ID of the build workflow'
+        required: true
+
 jobs:
-  Demojob:
-    permissions: write-all
+  redeploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: First Step 1
-        uses: actions/checkout@v2
-      - name: Second Step 2
-        env:
-          AZURE_UCAASACS_CONNECTION_STRING: ${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}
-        run: |
-           echo "Hi there....." >> env.production
-           cat env.production
-           echo "${{ secrets.AZURE_UCAASACS_CONNECTION_STRING }}" >> env.production
-      - name: Print Content of Env File
-        run: cat env.production   
-      - name: Third Step 3
-        env:
-          AZURE_UCAASACS_APPLICATION_ID: ${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}
-        run: |
-           echo "${{ secrets.AZURE_UCAASACS_APPLICATION_ID }}"    
+      - name: Download Artifact from Workflow 1
+        uses: actions/download-artifact@v4
+        with:
+          name: angular-dist
+          path: dist/
+
+      - name: Deploy to Secondary Azure Storage
+        uses: azure/CLI@v1
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az storage blob upload-batch \
+              --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT_2 }} \
+              --account-key ${{ secrets.AZURE_STORAGE_KEY_2 }} \
+              --source ./dist \
+              --destination \$web
