--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -1,30 +1,41 @@
-name: Redeploy to Secondary Azure Storage
+
+name: ezMigrate Stage Environment Build-&-Deploy
 
 on:
   workflow_dispatch:
-    inputs:
-      artifact_run_id:
-        description: 'Run ID of the build workflow'
-        required: true
+
+permissions: write-all
+
+env:
+  JAVA_VERSION: "8"
 
 jobs:
-  redeploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Download Artifact from Workflow 1
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v3
         with:
-          name: angular-dist
-          path: dist/
+          fetch-depth: 0
 
-      - name: Deploy to Secondary Azure Storage
-        uses: azure/CLI@v1
+      - uses: azure/login@v1
         with:
-          azcliversion: latest
-          inlineScript: |
-            az storage blob upload-batch \
-              --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT_2 }} \
-              --account-key ${{ secrets.AZURE_STORAGE_KEY_2 }} \
-              --source ./dist \
-              --destination \$web
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: Get Latest tag
+        id: current_tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"	
+      
+      - name: "Get next minor version"
+        id: next_tag
+        uses: "WyriHaximus/github-action-next-semvers@v1"
+        with:
+          version: ${{ steps.current_tag.outputs.tag }}
+          
+      - name: Check Output Parameters
+        run: |
+          echo "Got tag name ${{ steps.next_tag.outputs}}"
+          echo "Date is ${{steps.date.outputs.date}}"
