--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -3,7 +3,7 @@ name: ezMigrate Stage Environment Build-&-Deploy
 
 on:
   workflow_dispatch:
-
+  
 permissions: write-all
 
 env:
@@ -17,21 +17,7 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: Get current date
-        id: date
-        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-
-      - name: Get Latest tag
-        id: current_tag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"	
-      
-      - name: "Get next minor version"
-        id: next_tag
-        uses: "WyriHaximus/github-action-next-semvers@v1"
-        with:
-          version: ${{ steps.current_tag.outputs.tag }}
-          
-      - name: Check Output Parameters
+      - name: Show current directory and files
         run: |
-          echo "Got tag name ${{ steps.next_tag.outputs}}"
-          echo "Date is ${{steps.date.outputs.date}}"
+          pwd
+          ls -l
