--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -50,6 +50,7 @@ jobs:
           ls -ltr
           mv dist/demo-angular-app/browser/* dist/demo-angular-app
           rm -rf dist/demo-angular-app/browser
+          ls -ltr dist/
           cp dist/demo-angular-app/* ezMigrate-prod
           echo "Released ${{ steps.next_tag.outputs.patch }} Build - Prod" > ./ezMigrate-prod/ReleaseVersion.txt
 
@@ -69,6 +70,7 @@ jobs:
           ls -ltr
           mv dist/demo-angular-app/browser/* dist/demo-angular-app
           rm -rf dist/demo-angular-app/browser
+          ls -ltr dist/
           cp dist/demo-angular-app/* ezMigrate-qa
           echo "Released ${{ steps.next_tag.outputs.patch }} Build - QA" > ./ezMigrate-qa/ReleaseVersion.txt
 
@@ -84,12 +86,12 @@ jobs:
         with:
           name: ezMigrate-QA-Artifacts-${{ steps.date.outputs.date }}
           path: |
-            ezMigrate-qa
+            ./ezMigrate-qa
 
       - name: Upload ezMigrate Prod Zip Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ezMigrate-Prod-Zip-Artifacts-${{ steps.date.outputs.date }}
           path: |
-            ezMigrate-prod
+            ./ezMigrate-prod
       
