--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -93,9 +93,16 @@ jobs:
       - name: Upload ezMigrate Prod Zip Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ezMigrate-Prod-Zip-Artifacts-${{ steps.date.outputs.date }}
+          name: ezMigrate-prod-release-${{ steps.date.outputs.date }}
           path: |
             ./dist/
+            
+      - name: Archive ezMigrate UI QA Build
+        uses: vimtor/action-zip@v1
+        with:
+          files: "./dist/"
+          recursive: true
+          dest: "ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip"      
 
       - name: Build Angular Integration web app for QA 
         run: |
@@ -111,6 +118,34 @@ jobs:
       - name: Upload ezMigrate QA Zip Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ezMigrate-QA-Artifacts-${{ steps.date.outputs.date }}
+          name: ezMigrate-qa-release-${{ steps.date.outputs.date }}
           path: |
             ./dist/
+            
+      - name: Archive ezMigrate UI QA Build
+        uses: vimtor/action-zip@v1
+        with:
+          files: "./dist/"
+          recursive: true
+          dest: "ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip"     
+            
+       # Upload Release Asset
+      - name: Upload Prod ZIP Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+         upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
+         asset_path: ./ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
+         asset_name: ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
+         asset_content_type: application/zip
+         
+      - name: Upload QA ZIP Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+         upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
+         asset_path: ./ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
+         asset_name: ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
+         asset_content_type: application/zip
