--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -49,6 +49,7 @@ jobs:
       UPLOAD_URL: ${{ steps.create_release.outputs.upload_url }}
   build:
     runs-on: ubuntu-latest
+    needs: create-release-tag
     steps:
       - uses: actions/checkout@v3
         with:
