--- a/.github/workflows/ezMigrate-Prod-Deploy.yml
+++ b/.github/workflows/ezMigrate-Prod-Deploy.yml
@@ -1,5 +1,4 @@
-# Workflow to acquire release and deploy to Azure cloud the License Server components
-name: ezMigrate to prod release
+name: Push Release
 
 on:
   workflow_dispatch:
@@ -12,15 +11,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      RELEASE_VERSION_INPUT: ${{ github.event.inputs.release_version }}
+
     steps:
       - name: Install Zip
         uses: montudor/action-zip@v1
+
+      - name: Get Latest Tag if "latest" is selected
+        id: resolve_tag
+        uses: actions/github-script@v6
+        with:
+          script: |
+            let versionInput = "${{ env.RELEASE_VERSION_INPUT }}";
+            if (versionInput === "latest") {
+              const latest = await github.rest.repos.getLatestRelease({
+                owner: context.repo.owner,
+                repo: context.repo.repo
+              });
+              core.setOutput("tag", latest.data.tag_name);
+            } else {
+              core.setOutput("tag", versionInput);
+            }
+
+      - name: Debug final tag
+        run: echo "Resolved tag--> ${{ steps.resolve_tag.outputs.tag }}"
 
       - name: Retrieve ezMigrate Production Release ZIP
         id: release_download
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          version: "${{ github.event.inputs.release_version }}"  # Or hardcode a version like "latest"
+          version: ${{ steps.resolve_tag.outputs.tag }}
           regex: true
           file: "ezMigrate-prod-release-.*\\.zip"
           target: "./"
